# aws-lambda-authorizer-rust

./: README.md  build-arm.sh  build.sh  deploy.sh
code/: Cargo.lock.bak  Cargo.toml
code/src/: apigateway.rs  authmanager.rs  lib.rs  stsservice.rs
infra/terraform/: api_gateway.tf  main.tf  tenant_authorizer.tf
infra/terraform-aws-modules/lambda-module/: main.tf  outputs.tf  variables.tf
test/loadtest/: load-test.yml
