[package]
name = "tenant_authorizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambda_tenant_authorizer"
path = "src/bin/tenant_authorizer.rs"

[dependencies]
lambda_runtime = "0.4.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
aws-smithy-client = { version = "0.32", features = ["test-util"] }
aws-smithy-http = "0.32"
log = "^0.4"
simple-error = "0.2.3"
jsonwebtoken = "8.0.0"
once_cell = "1.9.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
aws-sdk-sts = "0.6.0"
aws-config = "0.6.0"
nanoid = "0.4.0"
async-trait = "0.1"

[dev-dependencies]
http = "0.2"
spectral = "0.6.0"